--- a/index.html
+++ b/index.html
@@ -1,52 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--Enlace interno y relativo al archivo de estilos, almacenado dentro de la carpeta css-->
-    <link rel="stylesheet" href="css/main.css">
-    <!--Enlaces internos y relativos a los archivos de fuente, almacenados dentro de la carpeta fonts-->
-    <link rel="preload" href="fonts/SyntaxLTStd-Bold.otf">
-    <link rel="preload" href="fonts/SyntaxLTStd-Roman.otf">
-    <title>Agustín Scirica - Medifé</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles/main.css">
+  <!--Enlace al CDN de Bootstrap-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+  <!--Enlace al CSS de FontAwesome-->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
+  <!--Enlaces internos y relativos a los archivos de fuente, almacenados dentro de la carpeta fonts-->
+  <link rel="preload" href="fonts/SyntaxLTStd-Bold.otf">
+  <link rel="preload" href="fonts/SyntaxLTStd-Roman.otf">
+  <title>Agustín Scirica - Medifé</title>
 </head>
-<!--Etiqueta que contiene al cuerpo principal del archivo html-->
+
 <body>
-    <!--Etiqueta utilizda para desarrollar la barra de navegación. La misma contiene un id para poder ir al principio del documento-->
-    <header id="top">
-        <h1>ACS</h1>
-        <!--Barra de navegación. Aun le falta darle estilo. No se terminó ya que no hemos visto de qué manera en el curso-->
-        <nav>
-            <ul>
-                <li>home</li>
-                <!--Enlaces internos y relativos a los archivos html de las 4 vistas restantes-->
-                <li><a href="views/about-me.html">sobre mi</a></li>
-                <li><a href="views/plans.html">planes</a></li>
-                <li><a href="views/news.html">noticias</a></li>
-                <li><a href="views/contact-me.html">contacto</a></li>
-            </ul>
-        </nav>
-    </header>
-    <!--Etiqueta utilizada para desarrollar el contenido principal del cuerpo html-->
-    <main>
-        <!--La idea del estilo para lo que sigue será que el texto esté por sobre la imagen de fondo. No sé si utilizar la imagen como fondo del html (y posicionar el párrafo con css) o si agregarla como un contenedor (y posicionar ambos con css)-->
-        <h2>¡Bienvenidos!</h2>
-        <!--Utilizo estilos en linea para poder posicionar temporalmente el texto por la izquierda de la foto. Será reemplazado cuando terminemos de ver flexbox en el curso-->
-        <div style="display: inline-block; width: 50%;">
-            <!--Utilizo texto 'dummy' hasta tanto defina el contenido del párrafo-->
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa quos deleniti esse, rerum vero recusandae. Enim, inventore repellat maxime praesentium unde sit eveniet voluptate obcaecati quibusdam dolorum odit iure beatae!
-            Molestias veniam reiciendis enim recusandae rem aut vero ab quod. Aperiam corporis facilis, odio facere unde dignissimos quisquam numquam vitae ducimus magni repellendus deserunt eius perspiciatis provident non deleniti repudiandae!
-            Dicta, accusamus dolore aspernatur eveniet id numquam vitae corporis laudantium. Dolores magnam tenetur, sequi ad necessitatibus aspernatur totam iste quae aliquam quia impedit expedita itaque tempore natus tempora praesentium nesciunt.</p>
+  <!--INICIO BARRA DE NAVEGACION-->
+  <nav class="navbar navbar-expand-lg fondo-naranja">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#"><img src="img/logo.png" alt="logo" height="60"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="views/about-me.html">sobre mí</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="views/plans.html">planes</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="views/news.html">noticias</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="views/contact-me.html">contacto</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <!--FIN BARRA DE NAVEGACION-->
+  <!--INICIO MAIN-->
+  <main>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-6 text-end texto-index">
+          <h1>¡Bienvenidos!</h1>
+          <p>Si llegaste hasta acá, entendés lo importante que <b class="negrita-naranja">es cuidar de tu salud y la de
+              tu familia</b>. Gracias a mi amplia experiencia, y el respaldo de <b>Medifé</b>, puedo asesorarte sobre
+            los mejores planes de salud prepaga. No esperes más para garantizar el bienestar de tu familia. Escribime
+            que juntos encontraremos la <b class="negrita-naranja">solución perfecta para proteger su salud y
+              tranquilidad</b>.</p>
+          <button type="button" class="btn fondo-naranja"><a
+              href="https://wa.me/5491128659835?text=¡Hola!%20Me%20gustar%C3%ADa%20saber%20m%C3%A1s%20sobre%20los%20planes%20de%20salud.%20Me%20llamo%20"
+              target="_blank">¡Escribime!</a></button>
         </div>
-        <!--La siguiente imagen tiene un texto alternativo, en caso que la foto no pueda ser mostrada en el explorador, o bien, para personas con discapacidad-->
-        <img src="img/family 2.jpg" alt="Black and white photo of a family of 3">
-    </main>
-    <!--Etiqueta para desarrolla el pie de la página-->
-    <footer>
-        <h3>Todos los derechos reservados</h3>
-        <!--Link para volver al principio del documento utilizando una llamada al id top-->
-        <a href="#top">Volver al inicio</a>
-    </footer>
+        <div class="col-6">
+          <img src="img/family.jpg" class="img-responsive" width="100%" alt="foto en blanco y negro de una familia">
+        </div>
+      </div>
+    </div>
+  </main>
+  <!--FIN MAIN-->
+  <!--INICIO FOOTER-->
+  <footer class="bg-dark text-center text-white">
+    <!-- Grid container -->
+    <div class="container p-4 pb-0">
+      <!-- Section: Social media -->
+      <section class="mb-4">
+        <!-- Facebook -->
+        <a class="btn text-white btn-floating m-1" style="background-color: #3b5998;"
+          href="https://www.facebook.com/agustinsciricamedife/" role="button"><i class="fab fa-facebook-f"></i></a>
+        <!-- Instagram -->
+        <a class="btn text-white btn-floating m-1" style="background-color: #ac2bac;"
+          href="https://www.instagram.com/agustinsciricamedife/" role="button"><i class="fab fa-instagram"></i></a>
+        <!-- Linkedin -->
+        <a class="btn text-white btn-floating m-1" style="background-color: #0082ca;"
+          href="https://www.linkedin.com/in/agustin-scirica" role="button"><i class="fab fa-linkedin-in"></i></a>
+      </section>
+    </div>
+    <!--COPYRIGHT-->
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+      © 2023 Copyright:
+      <a class="text-white" href="mailto:fernandojfuertes@gmail.com">FJF</a>
+    </div>
+  </footer>
+  <!--FIN FOOTER-->
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+<script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+
 </html>
