Se trabajan las imagenes en tamaño

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
               target="_blank">¡Escribime!</a></button>
         </div>
         <div class="col-6">
-          <img src="img/family.jpg" class="img-responsive" width="100%" alt="foto en blanco y negro de una familia">
+          <img src="img/family.jpg" class="img-fluid p-0" width="100%" alt="foto en blanco y negro de una familia">
         </div>
       </div>
     </div>
