Se diseñaron las vistas de about-me.html y news.html. Ambas son responsive

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <section>
 
-        <div class="bienvenida">
+        <div class="body-index">
             <h1>¡Bienvenido!</h1>
             <p>Si llegaste hasta acá, entendés lo importante que <b class="fuente-naranja">es cuidar de tu salud y la
                     de
