Se agrega SEO local en todas las vistas html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="css/main.css">
     <script src="https://kit.fontawesome.com/a22c32b01e.js" crossorigin="anonymous"></script>
     <title>Agustín Scirica | Asesor Medifé</title>
+    <meta name="description" content="Cuidar de tu salud y la de tu familia es fundamental. Con mi amplia experiencia y el respaldo de Medifé, te asesoro sobre los mejores planes de salud prepaga. No esperes más, garantiza el bienestar de tu familia. Contáctame y encontraremos la solución perfecta para proteger su salud y tranquilidad.">
+    <meta name="keywords" content="medicina prepaga, cobertura médica privada, seguro de salud privado, servicios médicos, medicina privada, atención médica, seguro médico, salud y bienestar, empresa de medicina prepaga, Medifé">
 </head>
 
 <body>
